fix css overflow issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,16 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0; 
+  background: transparent;  
+}
+
 .topnav {
   background-color: #78a5ff;
   position: fixed;
@@ -9,19 +22,22 @@
   display: flex;
   align-content: center;
   align-items: center;
+  transition-timing-function: ease;
+  transition-duration: 0.9s;
+  transition-delay: 0.0292683s;
 }
 
 .topnavButton {
-float: left;
-color: black;
-text-align: center;
-padding: 10px 10px;
-margin-right: 10px;
-text-decoration: none;
-font-size: 15px;
-background-color: #ddd;
-cursor: pointer;
-font-family: "Neucha", cursive;
-border-radius: 5%;
-font-weight: bold;
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 10px 10px;
+  margin-right: 10px;
+  text-decoration: none;
+  font-size: 15px;
+  background-color: #ddd;
+  cursor: pointer;
+  font-family: "Neucha", cursive;
+  border-radius: 5%;
+  font-weight: bold;
 }
