--- a/frontend/src/components/Gallery.css
+++ b/frontend/src/components/Gallery.css
@@ -1,51 +1,45 @@
 .carousel-container {
-    max-width: 70%;
-    margin: 5% auto;
-  }
+  max-width: 70%;
+  margin: 5% auto;
+  overflow: hidden;
+}
   
 .carousel-slide {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 500px;
 }
 
 .carousel-slide img {
-    max-width: 100%;
-    max-height: 100%; /* Ensure the image fits within the slide height */
-    width: auto;
-    height: auto;
-  }
-  
-.slider-control-bottomcenter .paging-item{
-    margin: 0 7px 0 7px;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
 }
   
+.slider-control-bottomcenter .paging-item{
+  margin: 0 7px 0 7px;
+}
+
 .slider-control-bottomcenter .paging-item .paging-dot{
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
 }
 
 .gallery-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    opacity: 0.5;
-    z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
 }
 
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-  
 .backgroundBody {
   min-height: 100%;
   display: flex;
